Use NuProcessorBuild to read command output.